# plankton

./: .gitignore  .oxlintrc.json  .pre-commit-config.yaml  .semgrep.yml  README.md  biome.json  package.json  pyproject.toml  tsconfig.json
.claude/hooks/: enforce_package_managers.sh  multi_linter.sh  protect_linter_configs.sh  test_hook.sh
.claude/hooks/test/: minimal-test-hook.sh  swap_settings.sh  test_docstring_branch.sh  test_empirical_p0.sh  test_empirical_p3_p4.sh  test_five_channels.sh  test_hook_timing.sh  test_notebook_edit.sh  test_nursery_config.sh  test_pm_set_e_bug.sh  test_production_path.sh  test_security_exclusions_compat.sh  test_step0_reproduction.sh  test_subprocess_logging.sh  test_subprocess_permissions.sh  test_subprocess_protection.sh  test_tier_config.sh  (+1 more)
benchmark/swebench/: __init__.py  __main__.py  agent.py  analyze.py  gate.py  hal_adapter.py  prereqs.py  runner.py  tasks.py
docs/: REFERENCE.md
docs/psf/: 00-plankton-architecture-overview.md  01-testing-infrastructure.md  02-benchmark-swebench.md
scripts/: pre_push_plankton_hooks.sh  setup.py  setup.sh
tests/integration/: __init__.py  conftest.py  test_abort_wiring.py  test_cli_wiring.py  test_e2e_pipeline.py  test_gate_runner_chain.py  test_hooks_robustness.py  test_resume_flow.py  test_task_validation.py
tests/unit/: conftest.py  test_hal_adapter.py  test_setup_wizard.py  test_swebench_agent.py  test_swebench_analyze.py  test_swebench_gate.py  test_swebench_integration.py  test_swebench_main.py  test_swebench_prereqs.py  test_swebench_runner.py  test_swebench_tasks.py
(+29 files in other folders)
