[project]
name = "my-project"
version = "0.1.0"
description = "Project description"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
benchmark = [
  # SWE-bench task loading
  "datasets>=2.0",
  # Statistical analysis (McNemar's test)
  "scipy>=1.17.0",
  # EvalPlus (Phase 1 archive, kept for reference)
  "evalplus>=0.3.1",
]
dev = [
  # Linting & formatting
  "ruff",
  "ty",
  "flake8",
  "flake8-pydantic",
  "flake8-async",
  "vulture",
  "bandit",
  # Testing
  "pytest",
  "pytest-xdist",
  # Pre-commit
  "pre-commit",
  # YAML linting
  "yamllint",
  # JSON schema validation
  "check-jsonschema",
  # Include benchmark deps so dev env has everything
  {include-group = "benchmark"},
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto"

[tool.bandit]
exclude_dirs = ["tests", "docs", ".venv", "scripts"]
skips = []

[tool.vulture]
min_confidence = 80
paths = ["src"]
exclude = ["tests", ".venv"]

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
